--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,11 +20,10 @@ requirements:
     - python >=3.6
     - pip
     - setuptools
-    - wheel
   run:
     - python >=3.6
     - apache-airflow >=2.1.0
-    - google-auth >=1.0.0,<2.0.0dev
+    - google-auth >=1.0.0,<3.0.0
     - google-auth-httplib2 >=0.0.1
     - grpcio >=1.15.0
 
