--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,12 +16,12 @@ build:
 
 requirements:
   host:
-    - python >=3.8
-    - setuptools >=67.2.0,<68.0.0
+    - python >=3.8,<4.dev0
+    - flit-core >=3.2,<4
     - pip
   run:
     - python >=3.8
-    - apache-airflow >=2.5.0
+    - apache-airflow >=2.6.0
     - google-auth-httplib2 >=0.0.1
     - google-auth >=1.0.0,<3.0.0
     - grpcio >=1.15.0
@@ -29,19 +29,16 @@ requirements:
 test:
   imports:
     - airflow.providers.grpc
-    - airflow.providers.grpc.hooks
   commands:
     - pip check
   requires:
     - pip
 
 about:
-  home: https://airflow.apache.org/
-  summary: Provider for Apache Airflow. Implements apache-airflow-providers-grpc package
+  home: https://github.com/apache/airflow/
+  summary: Provider package apache-airflow-providers-grpc for Apache Airflow
   license: Apache-2.0
-  license_file:
-    - LICENSE
-    - NOTICE
+  license_file: airflow/providers/grpc/LICENSE
   license_family: Apache
   doc_url: https://airflow.apache.org/docs/apache-airflow-providers-grpc/stable/index.html
   dev_url: https://github.com/apache/airflow/
